// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rdme whoami > should error if user is not authenticated 1`] = `
{
  "error": [Error: Please login using \`rdme login\`.],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme whoami > should return the authenticated user 1`] = `
{
  "result": "You are currently logged in as email@example.com to the subdomain project.",
  "stderr": "",
  "stdout": "",
}
`;
